css basics day1

--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -9,3 +9,13 @@ hr {
   border: none;
   border-bottom: 1px solid #d8dee9;
 }
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+pre {
+  overflow: auto;
+  white-space: pre-wrap;
+}
