--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -19,3 +19,11 @@ pre {
   overflow: auto;
   white-space: pre-wrap;
 }
+
+footer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 4em;
+  text-align: center;
+}
