--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -27,3 +27,16 @@ footer {
   margin-top: 4em;
   text-align: center;
 }
+/* 01 Centering */
+
+header,
+main {
+  margin: 0 auto;
+  max-width: 50em;
+}
+
+/* 02 Font family */
+
+body {
+  font-family: "Helvetica", "Arial", sans-serif;
+}
