--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -302,3 +302,16 @@ footer .button {
   display: block;
   font-size: 1.2em;
 }
+.resource-icon {
+  box-sizing: border-box;
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 0;
+  height: 120px;
+  margin: 0;
+  margin-right: 1em;
+  padding: 0;
+  text-align: center;
+  width: 120px;
+}
+
