--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -325,3 +325,13 @@ footer .button {
 .resource-css-reference .resource-icon {
   padding: 20px;
 }
+/* Responsiveness */
+
+@media (min-width: 600px) {
+  .buttons {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 0;
+  }
+}
