--- a/basics of Html-css-js/weddev basics/style.css
+++ b/basics of Html-css-js/weddev basics/style.css
@@ -335,3 +335,9 @@ footer .button {
     padding: 1em 0;
   }
 }
+.buttons .button {
+  flex-grow: 1;
+  flex-shrink: 0;
+  margin-bottom: 0;
+  margin-right: 1em;
+}
